Added stuff to website

--- a/website/presentations.html
+++ b/website/presentations.html
@@ -25,13 +25,8 @@
         <!-- Main content Start -->
         <div class="main-content flex-row">
             <div class="introduction flex-column">
-                    <h1>Student Health and Wellbeing App</h1>
-                    <p>This app is for students at the University of Alabama to
-                     provide survey questions about their health and wellbeing,
-                     monitor their own progression, and connect them to resources
-                     that the university offers. The data collected through this app
-                     will give the University a better understanding of their student
-                     body, so they can provide a more complete experience.<br></p>
+                    <h1>Deliverables</h1>
+                    <p><br></p>
                     <a class="button blue ex-large">Download</a>
             </div>
         </div>
