--- a/website/index.html
+++ b/website/index.html
@@ -26,14 +26,18 @@
         <div class="main-content flex-row">
             <div class="introduction flex-column">
                     <h1>Student Health and Wellbeing App</h1>
-                    <p>This app is for students at the University of Alabama to
-                     provide survey questions about their health and wellbeing,
-                     monitor their own progression, and connect them to resources
-                     that the university offers. The data collected through this app
-                     will give the University a better understanding of their student
-                     body, so they can provide a more complete experience.<br></p>
+                    <p>Better understanding, better life<br></p>
                     <a class="button blue ex-large">Download</a>
             </div>
+            <img src="Logo_Transparent.PNG">
+        </div>
+        <div class="sub-content flex-row">
+                <p>This app is for students at the University of Alabama to
+                        provide survey questions about their health and wellbeing,
+                        monitor their own progression, and connect them to resources
+                        that the university offers. <br><br>The data collected through this app
+                        will give the University a better understanding of their student
+                        body, so they can provide a more complete experience.</p>
         </div>
     </div>
 </body>
