--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
     <!-- Website navigation bar Start -->
     <div id="navbar-container" class="navbar-container">
         <div id="navbar-body flex-row" class="navbar-body">
-            <a class="navbar-brand">Wellbeing App</a>
+            <a class="navbar-brand"></a>
             <a class="navbar-button selected" onclick="location.href = 'index.html'">Home</a>
             <a class="navbar-button" onclick="location.href = 'presentations.html'">Presentations</a>
             <a class="navbar-button" onclick="location.href = 'about.html'">Team</a>
@@ -25,7 +25,7 @@
         <!-- Main content Start -->
         <div class="main-content flex-row">
             <div class="introduction flex-column">
-                    <h1>Student Health and Wellbeing App</h1>
+                    <h1>Student Health<br>and Wellbeing App</h1>
                     <p>Better understanding, better life<br></p>
                     <a class="button blue ex-large">Download</a>
             </div>
