--- a/website/presentations.html
+++ b/website/presentations.html
@@ -14,9 +14,9 @@
     <!-- Website navigation bar Start -->
     <div id="navbar-container" class="navbar-container">
         <div id="navbar-body flex-row" class="navbar-body">
-            <a class="navbar-brand">Wellbeing App</a>
-            <a class="navbar-button selected" onclick="location.href = 'index.html'">Home</a>
-            <a class="navbar-button" onclick="location.href = 'presentations.html'">Presentations</a>
+            <a class="navbar-brand"></a>
+            <a class="navbar-button" onclick="location.href = 'index.html'">Home</a>
+            <a class="navbar-button selected" onclick="location.href = 'presentations.html'">Presentations</a>
             <a class="navbar-button" onclick="location.href = 'about.html'">Team</a>
         </div>
     </div>
