Add source and sprint drive to website, made scores update more frequently, created new resource page that just links to the Alabama model website

--- a/website/presentations.html
+++ b/website/presentations.html
@@ -26,6 +26,8 @@
         <div class="main-content flex-row">
             <div class="introduction flex-column">
                     <h1>Deliverables</h1>
+                    <p>Source Code: <a href="https://github.com/fdbostwick/SHWBApp" target="_blank">github repository</a></br>
+                    Sprint Information: <a href="https://drive.google.com/drive/folders/177Xdb2xmFBV9yP_fc5y6Vj2YKmryg6XY?usp=sharing" target="_blank">click here</a></p>
                     <p><br></p>
                     <a class="button blue ex-large">Download</a>
             </div>
